# mesytec-mcpd

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CPackOptions.cmake.in  Dockerfile.centos-7  Dockerfile.fedora-35  LICENSE  README-python.md  README.md  TODO.md  mpsd_daq_gui.py  pyproject.toml
doc/: PSD+ cmd Format_II_v1_11.odt
doc/sphinx/: CMakeLists.txt
doc/sphinx/source/: conf.py.in  index.rst  library.rst  overview.rst  protocol.rst
extras/: CMakeLists.txt
extras/cmake-example/: CMakeLists.txt  README.md  mcpd-example.cc
extras/mcpd-cli/: CMakeLists.txt  mcpd-cli-python-example.py  mcpd-cli.cc  mcpd-setup.cc  mcpd8_chopper_input_setup.cmd  mcpd_root_histos.cc  mcpd_root_histos.h  mdat2mcpdlst.cc  mpsd8_bus_capa_test.sh  mpsd8_check.sh  parse_mcpd_packet_from_hex_string.cc
extras/mcpd-udp-dev-gui/: CMakeLists.txt  main.cc  mainwindow.ui  mcpd_udp_gui.cc  mcpd_udp_gui.h  resources.qrc
extras/mcpd-udp-dev-gui/util/: int_types.h  mesytec_spdlog_util.h  qt_logview.cc  qt_logview.h  qt_monospace_textedit.cc  qt_monospace_textedit.h  qt_util.cc  qt_util.h
extras/scripts/: mpsd-pulser-test.cmd  mpsd-pulser-test.sh
src/: CMakeLists.txt  cli-test0.py  cli-test1.py  cli-test2.py
src/gui/: __init__.py  main_window.py  resources.qrc
src/mesytec-mcpd/: CMakeLists.txt  __init__.py  git_version.cc.in  git_version.h  listfile_reader.cc  main.cc  mcpd_core.cc  mcpd_core.h  mcpd_error.h  mcpd_functions.cc  mcpd_functions.h  mcpd_py_embed.cc  mcpd_py_lib.cc  mcpd_py_lib.h  mcpd_py_lib.test.cc  mcpd_py_module.cc  mdll_functions.cc  mdll_functions.h  mesytec-mcpd.h  mesytec_mcpd_py.cc  mesytec_mcpd_py.h  mesytec_mcpd_py_embed.cc  mesytec_mcpd_py_module.cc
src/mesytec-mcpd/util/: int_types.h  locked_ptr.h  logging.cc  logging.h  pretty_function.h  pybind11_log.h  thread_safe_queue.h  thread_safe_queue.test.cc  udp_sockets.cc  udp_sockets.h
tools/cmake/: mesytec-mcpd-config.cmake.in
