# TODO: implement a hook that calls pybind11-stubgen and places the stubs inside
# the wheel in case one is built. This should also work during dev, without
# having to build a wheel.

[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools-scm", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "mesytec_mcpd_py"
dynamic = ["version"]

[project.optional-dependencies]
gui = ["pyqtgraph", "numpy", "PySide6", "boost-histogram", "rich"]

[project.scripts]
mesytec-mcpd-gui = "mesytec_mcpd_py.gui.main_window:main"

[tool.scikit-build]
cmake.args = [ '-DMCPD_ENABLE_PYTHON=ON' ]
build.verbose = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
