# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://scikit-build-core.readthedocs.io/en/stable/configuration/

[build-system]
requires = ["scikit-build-core>=0.12", "setuptools-scm", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "mesytec_mcpd"
dynamic = ["version"]
requires-python = ">= 3.12"
authors = [ { name = "Florian Lüke", email = "f.lueke@mesytec.com" } ]
description = "Driver library and tools for the mesytec PSD+ system"
readme = "README.md"
license = "BSL-1.0"
license-files = ["LICEN[CS]E*"]
keywords = ["mesytec", "MCPD", "MPSD", "MDLL", "neutron scattering"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Module",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
gui = ["pyqtgraph", "numpy", "PySide6", "hist[plot,fit]", "rich", "awkward", "numba", "platformdirs"]
dev = ["pre-commit", "scikit-build-core>=0.12", "setuptools-scm", "pybind11-stubgen"]

[project.gui-scripts]
mesytec-mcpd-gui = "mesytec_mcpd.gui.main_window:main"

[project.urls]
Homepage = "https://mesytec.com/products/neutron-scattering.html"
Repository = "https://github.com/mesytec/mesytec-mcpd"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.args = [ '-DMCPD_ENABLE_PYTHON=ON' ]
build.verbose = true
logging.level = "INFO"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = [ "mesytec_mcpd" ]
wheel.py-api = "cp312"
# Not sure which one to keep. Plain 'build' is picked up by vscode, the
# {wheel_tag} variant was not but it might be needed for cibuildwheel.
#build-dir = "build/{wheel_tag}"
build-dir = "build"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
target-version = "py312"

# https://docs.astral.sh/ruff/rules/, https://docs.astral.sh/ruff/settings/#lint_select
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "EXE"]

[tool.pyside6-project]
files = ["src/gui/main_window.py", "src/gui/resources.qrc"]
